safari fix test whitespace

--- a/src/components/landingpage/landingpage.styles.scss
+++ b/src/components/landingpage/landingpage.styles.scss
@@ -63,6 +63,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    white-space: normal;
+    word-wrap: normal;
 }
 
 .intro-name {
